# kaggle-titanic

./: .envrc  .gitignore  Dockerfile  TODO  Titanic.ipynb  docker-compose.yml  environment.yml  pyproject.toml  titanic.py  titanic__tensor-flow__base.py
kaggle_titanic/: analysis.py  feature_engineering.py  titanic.py  titanic__automl__base.py  titanic__random_forest.py  titanic__tensor-flow__base.py  titanic__tensorflow_2.py
output/: titanic__random_forest.csv  titanic__tensorflow_2.csv  tutorial__hyperparameter-optimized.csv  tutorial__tensorflow.csv
