[tool.poetry]
name = "kaggle-titanic"
version = "0.1.0"
description = ""
authors = ["Derek Moore <derek@findthebrink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
tensorflow = { extras = ["and-cuda"], version = "^2.16.1" }
tensorflow-decision-forests = "^1.9.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
# decorator = "^5.1.1"
# ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
